<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/u_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/t_button"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-195dp"
        android:layout_marginEnd="89dp"
        android:text="U" />

    <Button
        android:id="@+id/o_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/t_button"
        android:layout_marginBottom="-195dp"
        android:layout_toStartOf="@+id/progressBar"
        android:text="O" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/a_button"
        android:layout_alignTop="@+id/textView4"
        android:onClick="refreshIte"
        android:text="Refresh" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:text="@string/fit_label" />

    <Button
        android:id="@+id/fit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="161dp"
        android:text="@string/fit_label" />

    <Button
        android:id="@+id/t_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:text="@string/train_button" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignEnd="@+id/buffer_coumt"
        android:onClick="play"
        android:text="PLAY" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/b_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/a_button"
        android:layout_centerHorizontal="true"
        android:text="@string/b_button" />

    <Button
        android:id="@+id/c_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/b_button"
        android:layout_marginEnd="35dp"
        android:text="@string/c_button" />

    <Button
        android:id="@+id/a_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginStart="28dp"
        android:text="@string/a_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:text="@string/train_label" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:text="@string/fit_label" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="134dp"
        android:text="@string/b_label" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginEnd="66dp"
        android:text="@string/c_label" />

    <TextView
        android:id="@+id/a_prob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/b_prob"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/o_prob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginBottom="31dp" />

    <TextView
        android:id="@+id/u_prob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/o_prob"
        android:layout_alignStart="@+id/play_button" />

    <TextView
        android:id="@+id/b_prob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp" />

    <TextView
        android:id="@+id/c_prob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignTop="@+id/b_prob" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="126dp"
        android:layout_marginStart="58dp"
        android:text="@string/a_label" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a_prob"
        android:layout_toStartOf="@+id/play_button"
        android:text="U" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/a_prob"
        android:layout_marginStart="125dp"
        android:text="O" />

    <TextView
        android:id="@+id/buffer_coumt"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t_button"
        android:layout_alignStart="@+id/c_button"
        android:text="TextView" />

    <TextView
        android:id="@+id/iterationCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:text="TextView" />


</RelativeLayout>

